--- a/gift.html
+++ b/gift.html
@@ -918,7 +918,7 @@ text-align:center;
 </form>
   </form>
 <div class="container signin" role="alert" >
-         "Aliko Dangote Foundation (ADF) is the private charitable foundation of Alhaji Aliko Dangote. Incorporated in 1994 as Dangote Foundation, with the mission to enhance opportunities for social change through strategic investments that improve health and wellbeing, promote quality education, and broaden economic empowerment opportunities."
+         "We are committed to tackling the root causes of poverty and marginalisation through education, health, environmental conservation, and integrated livelihood programmes that ensures every child has access to quality learning and development opportunities."
     </div>
 <br><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -934,11 +934,11 @@ text-align:center;
 <!-----350×70 ads--->
 <h2 style="text-align:center">Sponsor's Card</h2>
 <div class="firsttechinfoar">
-  <img src="https://www.3blmedia.com/sites/www.3blmedia.com/files/styles/400w/public/images/Dangote.jpg" alt="John" style="width:100%">
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgHmhp-8CeAfomu9q0Dx1P6GCpcwAJSbxB9aS5qwCKoe0_eyH_TpNbAk5__stm-JNWvVUEqS0DpFZ2aUKPn58_TE2-_lkoiZGdmwJHisoCkDF7E1yahc1hexLM-XDEwvKWiB_UUb-GLJvJDHi9CzLndlPh0vDFRJIY_JHB0s5I9k5E6FIEuSgZUEC97Vgce/s600/WhatsApp%20Image%202025-05-30%20at%2013.53.37_1d3b0095.jpg" alt="John" style="width:100%">
   <br/>
   <h2 ><p style ="color:green">PRIVATE SECTOR</h2><p>
   <p class="title" style= "color:green" >COALITION AGAINST UNEMPLOYMENT</p>
-  <p style ="color:black" >SUPPORTING NIGERIANS</p>
+  <p style ="color:black" >SUPPORTING KENYANS</p>
   <div style="margin: 24px 0;">
     <a href=""><i class="fa fa-dribbble"></i></a> 
     <a href=""><i class="fa fa-twitter"></i></a>  
