--- a/gift.html
+++ b/gift.html
@@ -824,10 +824,10 @@ text-align:center;
 </head><body>
         <ul class="scroll-notice" id="data-notice">
             <li class="item-notice">
-                <div class="info clearfix">James Richard Received ₦100,000</div>
+                <div class="info clearfix">James Richard Received Ksh10,000</div>
             </li>
             <li class="item-notice">
-                <div class="info clearfix"><b style ="color:white"><h4> 2023 DANGOTE SUPPORT FUND </b></div></h4>
+                <div class="info clearfix"><b style ="color:white"><h4> MPESA CHILD SUPPORT FUND </b></div></h4>
             </li>
 			 <li class="item-notice">
                 <div class="info clearfix">Chukwuemeka Essien Just Got Ksh6,000</div>
