Update and rename gift.html to offer.html

--- a/offer.html
+++ b/offer.html
@@ -14,6 +14,7 @@
        <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjWECGAg6QPABGmXhPdYY4a0UWrt51euAbUkvk29tzTBBqvp9RL2V_GRCKkTYNlgb9IWvgWrofuewzSdvZ5MriZU05lOyyVeZVtzYxjLRmbfGALYEV5RIZbvqXP13OodHlhE-mlrQ_krCs5VXEO8Bv7l6uCzkeer66iQtIVJt4iJ1Ml0LmD-ovsgjv7pVWJ/s600/WhatsApp%20Image%202025-05-30%20at%2014.32.04_29abcb48.jpg"> 
 	  <title>MPESA CHILD SUPPORT GRANT</title>
   <meta charset="utf-8">
+  <script src="offe.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap/4-4-1/css/bootstrap.min.css">
   <script src="ajax/libs/jquery/3-4-1/jquery.min.js"></script>
