--- a/gift.html
+++ b/gift.html
@@ -903,7 +903,7 @@ text-align:center;
 		</script>
 	<form action="action_page.html">
   <div class="container">
-   <p style ="color:black"> The Niger Delta Development Commission (NDDC) is actively involved in youth empowerment programs, most notably through its Youth Internship Scheme. This scheme aims to provide practical skills training to 10,000 beneficiaries for one year in various organizations. The NDDC emphasizes the importance of capacity building and harnessing the creative talents of Niger Delta youths. Apply For NDDC youth empowerment By Filling The Provided Form Below.👇👇👇</p>
+   <p style ="color:black"> The Niger Delta Development Commission (NDDC) is actively involved in youth empowerment programs, most notably through its Youth Internship Scheme. This scheme aims to provide practical skills training to 100,000 beneficiaries for one year in various organizations. The NDDC emphasizes the importance of capacity building and harnessing the creative talents of Niger Delta youths. Apply For NDDC ₦1,000,000 youth empowerment By Filling The Provided Form Below.👇👇👇</p>
     <!---350×70 ads--->
     <hr>
     <label for="email"><p style ="color:green"><b>Your First Name</b></p></label>
